Remove unnecessary configuration

--- a/src/main/webapp/todomvc.html
+++ b/src/main/webapp/todomvc.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-framework="react">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>React • TodoMVC</title>
