--- a/src/main/webapp/dev.html
+++ b/src/main/webapp/dev.html
@@ -13,6 +13,7 @@
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
 
+<section id="devtools"></section>
 <script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/dev/react.js"></script>
 <script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/dev/react-dom.js"></script>
 <script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/todomvc_dev.nocache.js"></script>
