--- a/src/main/java/react4j/todomvc/public/dev/index.html
+++ b/src/main/java/react4j/todomvc/public/dev/index.html
@@ -13,8 +13,8 @@
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
 
-<script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/dev/react.js"></script>
-<script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/dev/react-dom.js"></script>
-<script type="text/javascript" language="javascript" src="http://127.0.0.1:8888/todomvc_dev/todomvc_dev.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="dev/react.js"></script>
+<script type="text/javascript" language="javascript" src="dev/react-dom.js"></script>
+<script type="text/javascript" language="javascript" src="todomvc_dev.nocache.js"></script>
 </body>
 </html>
