Update to use correct paths now that it is stored as a resource

--- a/src/main/java/react4j/todomvc/public/prod/index.html
+++ b/src/main/java/react4j/todomvc/public/prod/index.html
@@ -13,8 +13,8 @@
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
 
-<script type="text/javascript" language="javascript" src="todomvc/react.js"></script>
-<script type="text/javascript" language="javascript" src="todomvc/react-dom.js"></script>
-<script type="text/javascript" language="javascript" src="todomvc/todomvc.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="react.js"></script>
+<script type="text/javascript" language="javascript" src="react-dom.js"></script>
+<script type="text/javascript" language="javascript" src="todomvc.nocache.js"></script>
 </body>
 </html>
