Reference the default js produced by latest plugin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,6 @@
 
 <script type="text/javascript" language="javascript" src="dev/react.js"></script>
 <script type="text/javascript" language="javascript" src="dev/react-dom.js"></script>
-<script type="text/javascript" language="javascript" src="app.js"></script>
+<script type="text/javascript" language="javascript" src="react4j-todomvc/react4j-todomvc.js"></script>
 </body>
 </html>
