--- a/src/main/java/react4j/todomvc/public/dev/index.html
+++ b/src/main/java/react4j/todomvc/public/dev/index.html
@@ -15,6 +15,6 @@
 
 <script type="text/javascript" language="javascript" src="dev/react.js"></script>
 <script type="text/javascript" language="javascript" src="dev/react-dom.js"></script>
-<script type="text/javascript" language="javascript" src="todomvc_dev.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="/recompile-requester/todomvc_dev"></script>
 </body>
 </html>
